--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Kevin Sadler
 Current Maintainers:
 Jonathan Stickles (jonathansfox@users.sourceforge.net)
 Chris Johnson (grundee@users.sourceforge.net)
+Jared Grommesh (https://github.com/King-Drake/)
 
 Full list of Contributors:
 (not just to the main project but also to ports, forks, mods, etc.)
