--- a/AUTHORS
+++ b/AUTHORS
@@ -65,3 +65,9 @@ Veroule (2013) - contributed bug report
 vherid (2013) - direct contributor to main project
 wisq (2008) - direct contributor to main project
 zaroth (2014) - co-maintainer of the GitHub fork with Lasica
+
+2017+
+bregma - contributed to GitHub fork
+IsaacG - current maintainer
+Schmel924 - contributed to GitHub fork
+SlatersQuest - made the Terra Vitae mod and contributed bug reports
