--- a/changelog.txt
+++ b/changelog.txt
@@ -384,3 +384,13 @@ Increase of about 800.  Found and removed a number of unused externs, most notab
 Apart from extern strings, about no extern usage on the global or file scope, save the aformentioned namespace conflict.
 
 Shifted a few const strings to be within the functions calling them.  Decided the usefulness of such actions are dubious, started extracting parts of the interrogation function.
+
+Some refactoring of creaturetype.cpp armCreature(Creature &cr, short type);
+Used tuples in refactoring of creaturetypes.cpp.  tuples should replace many of the fixed length vectors I have used in the past.  Passed an array by reference.  May be worth passing other arrays by reference.
+
+Added new automated tests that create all existing creatures, and arm them based on every possible gun control law.
+As a side effect it creates all default locations, due to some overlap between the creature.cpp and locations.cpp code.
+
+If someone runs the automated tests, it is recommended to restart the program before starting a new game.
+
+Fixed a bug where Gentleman's Clubs were nameless.
